  described in the Hooks chapter.  The INotFoundView will be called
  when the framework detects that a view lookup done as a result of a
  request fails; it should accept a context object and a request
  object; it should return an IResponse object (a webob response,
  basically).  See the Hooks narrative chapter of the BFG docs for
  more info.

Deprecations
------------

- The ``repoze.bfg.interfaces.INotFoundAppFactory`` interface has been
  deprecated in favor of using the new
  ``repoze.bfg.interfaces.INotFoundView`` mechanism.

Renames
-------

- Renamed ``repoze.bfg.interfaces.IForbiddenResponseFactory`` to
  ``repoze.bfg.interfaces.IForbiddenView``.


0.9a7 (2009-05-30)
==================

Features
--------

- Remove "context" argument from ``effective_principals`` and
  ``authenticated_userid`` function APIs in ``repoze.bfg.security``,
  effectively a doing reversion to 0.8 and before behavior.  Both
  functions now again accept only the ``request`` parameter.

0.9a6 (2009-05-29)
==================

Documentation
-------------

- Changed "BFG Wiki" tutorial to use AuthTktAuthenticationPolicy
  rather than repoze.who.

Features
--------

- Add an AuthTktAuthenticationPolicy.  This policy retrieves
  credentials from an auth_tkt cookie managed by the application
  itself (instead of relying on an upstream data source for
  authentication data).  See the Security API chapter of the
  documentation for more info.

- Allow RemoteUserAuthenticationPolicy and
  RepozeWho1AuthenticationPolicy to accept various constructor
  arguments.  See the Security API chapter of the documentation for
  more info.

0.9a5 (2009-05-28)
==================

Features
--------

- Add a ``get_app`` API functions to the ``paster`` module.  This
  obtains a WSGI application from a config file given a config file
  name and a section name.  See the ``repoze.bfg.paster`` API docs for
  more information.

- Add a new module named ``scripting``.  It contains a ``get_root``